Added simple CIO-based Redis client

--- a/settings.gradle
+++ b/settings.gradle
@@ -20,6 +20,7 @@ include ':ktor-client:ktor-client-features'
 include ':ktor-client:ktor-client-features:ktor-client-json'
 include ':ktor-client:ktor-client-features:ktor-client-auth-basic'
 include ':ktor-client:ktor-client-features:ktor-client-websocket'
+include ':ktor-client:ktor-client-redis'
 include ':ktor-features:ktor-freemarker'
 include ':ktor-features:ktor-velocity'
 include ':ktor-features:ktor-gson'
