--- a/settings.gradle
+++ b/settings.gradle
@@ -27,6 +27,7 @@ include ':ktor-features:ktor-gson'
 include ':ktor-features:ktor-jackson'
 include ':ktor-features:ktor-metrics'
 include ':ktor-features:ktor-server-sessions'
+include ':ktor-features:ktor-server-sessions-redis'
 include ':ktor-features:ktor-locations'
 include ':ktor-features:ktor-websockets'
 include ':ktor-features:ktor-html-builder'
