--- a/settings.gradle
+++ b/settings.gradle
@@ -20,7 +20,9 @@ include ':ktor-client:ktor-client-features'
 include ':ktor-client:ktor-client-features:ktor-client-json'
 include ':ktor-client:ktor-client-features:ktor-client-auth-basic'
 include ':ktor-client:ktor-client-features:ktor-client-websocket'
-include ':ktor-client:ktor-client-redis'
+include ':ktor-client:ktor-client-redis-core'
+include ':ktor-client:ktor-client-redis-cio'
+include ':ktor-client:ktor-client-redis-lettuce'
 include ':ktor-features:ktor-freemarker'
 include ':ktor-features:ktor-velocity'
 include ':ktor-features:ktor-gson'
