--- a/ktor-client-redis/ktor-client-redis-lettuce/build.gradle
+++ b/ktor-client-redis/ktor-client-redis-lettuce/build.gradle
@@ -2,6 +2,6 @@ description = ''
 
 dependencies {
     compile project(":ktor-network")
-    compile project(":ktor-client:ktor-client-redis-core")
+    compile project(":ktor-client-redis:ktor-client-redis-core")
     compile "io.lettuce:lettuce-core:5.0.4.RELEASE"
 }
