--- a/settings.gradle
+++ b/settings.gradle
@@ -20,6 +20,7 @@ include ':ktor-client:ktor-client-features'
 include ':ktor-client:ktor-client-features:ktor-client-json'
 include ':ktor-client:ktor-client-features:ktor-client-auth-basic'
 include ':ktor-client:ktor-client-features:ktor-client-websocket'
+include ':ktor-client-dns'
 include ':ktor-features:ktor-freemarker'
 include ':ktor-features:ktor-velocity'
 include ':ktor-features:ktor-gson'
@@ -37,6 +38,7 @@ include ':ktor-http'
 include ':ktor-utils'
 include ':ktor-http-cio'
 include ':ktor-network'
+include ':ktor-network-dns'
 include ':ktor-network-tls'
 include ':ktor-samples:ktor-samples-hello'
 include ':ktor-samples:ktor-samples-html'
@@ -80,6 +82,7 @@ project(':ktor-client:ktor-client-features').projectDir = "$rootDir/ktor-client/
 project(':ktor-client:ktor-client-features:ktor-client-json').projectDir = "$rootDir/ktor-client/ktor-client-features/ktor-client-json" as File
 project(':ktor-client:ktor-client-features:ktor-client-auth-basic').projectDir = "$rootDir/ktor-client/ktor-client-features/ktor-client-auth-basic" as File
 project(':ktor-client:ktor-client-features:ktor-client-websocket').projectDir = "$rootDir/ktor-client/ktor-client-features/ktor-client-websocket" as File
+project(':ktor-client-dns').projectDir = "$rootDir/ktor-client-dns" as File
 project(':ktor-features:ktor-freemarker').projectDir = "$rootDir/ktor-features/ktor-freemarker" as File
 project(':ktor-features:ktor-velocity').projectDir = "$rootDir/ktor-features/ktor-velocity" as File
 project(':ktor-features:ktor-gson').projectDir = "$rootDir/ktor-features/ktor-gson" as File
@@ -97,6 +100,7 @@ project(':ktor-http').projectDir = "$rootDir/ktor-http" as File
 project(':ktor-utils').projectDir = "$rootDir/ktor-utils" as File
 project(':ktor-http-cio').projectDir = "$rootDir/ktor-http-cio" as File
 project(':ktor-network').projectDir = "$rootDir/ktor-network" as File
+project(':ktor-network-dns').projectDir = "$rootDir/ktor-network-dns" as File
 project(':ktor-network-tls').projectDir = "$rootDir/ktor-network-tls" as File
 project(':ktor-samples:ktor-samples-hello').projectDir = "$rootDir/ktor-samples/ktor-samples-hello" as File
 project(':ktor-samples:ktor-samples-html').projectDir = "$rootDir/ktor-samples/ktor-samples-html" as File
