--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 version=0.9.4-SNAPSHOT
 
-kotlin_version=1.2.50
-coroutines_version=0.23.3-dev-1
+kotlin_version=1.2.51
+coroutines_version=0.23.5.native
 dokka_version=0.9.16
 
 netty_version=4.1.24.Final
@@ -16,4 +16,6 @@ junit_version=4.12
 
 jmh_version=1.20
 
-kotlinx_io_version=1.0.27
+kotlinx_io_version=1.0.37
+
+kotlin_native_version=0.8-dev-2701
