Configure native publishing
fixup! Simplify and fix url encoding; android engine timeout config

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$bintray_plugin_version"
         classpath 'net.researchgate:gradle-release:2.4.0'
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
 
@@ -44,15 +44,7 @@ ext.dokkaExcludes = [
 ext.globalM2 = "$buildDir/m2"
 ext.publishLocal = project.hasProperty('publishLocal')
 
-
-def platformOf(Project project) {
-    def commonModules = ['ktor-client-core', 'ktor-utils', 'ktor-http']
-    def nativeModules = ['ktor-client-ios', 'ktor-http-ios', 'ktor-utils-ios', 'ktor-client-core-ios']
-
-    if (project.name in commonModules) return 'common'
-    if (project.name in nativeModules) return 'native'
-    return 'jvm'
-}
+apply from: 'gradle/platform.gradle'
 
 allprojects {
     def platform = platformOf(project)
@@ -60,12 +52,9 @@ allprojects {
     group = 'io.ktor'
     version = configuredVersion
 
-    apply from: rootProject.file("gradle/${platform}.gradle")
-
     repositories {
 //        mavenLocal()
         jcenter()
-        maven { url 'https://dl.bintray.com/e5l/kotlinx-io-test' }
 
         if (kotlin_version.contains('-eap') || kotlin_version.contains('-rc')) {
             if (kotlin_version.startsWith("1.1")) {
@@ -79,12 +68,18 @@ allprojects {
         } else if (kotlin_version.endsWith('-SNAPSHOT')) {
             maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
         }
+
+        maven { url 'https://dl.bintray.com/e5l/kotlinx-io-test' }
         maven { url 'https://dl.bintray.com/qwwdfsad/kotlinx' }
+    }
+
+    apply from: rootProject.file("gradle/${platform}.gradle")
+    if (platform != 'native') {
+        apply from: rootProject.file('gradle/publish.gradle')
     }
 
     sourceSets {
         main {
-            java.srcDir 'src'
             kotlin.srcDir 'src'
             resources.srcDir 'resources'
         }
@@ -93,6 +88,21 @@ allprojects {
             resources.srcDir 'test-resources'
         }
     }
+
+    task sourceJar(type: Jar, dependsOn: classes) {
+        classifier 'sources'
+        from sourceSets.main.kotlin
+        duplicatesStrategy DuplicatesStrategy.EXCLUDE
+        def platformSrc = sourceSets.main.allSource
+        def commonSrc = rootProject.sourceSets.main.allSource
+        from(platformSrc + commonSrc)
+    }
+
+    task emptyJar(type: Jar) {
+        classifier 'javadoc'
+    }
+
+    tasks.build.dependsOn(['sourceJar', 'emptyJar'])
 
     kotlin.experimental.coroutines 'enable'
 }
