--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=0.9.4-SNAPSHOT
+version=0.9.6.3
 
 kotlin_version=1.2.51
 coroutines_version=0.23.5.native
@@ -19,3 +19,5 @@ jmh_version=1.20
 kotlinx_io_version=1.0.37
 
 kotlin_native_version=0.8-dev-2701
+
+bintray_plugin_version=1.8.2-SNAPSHOT
