Add client engine service loaders
fixup! Add client engine service loaders

 ~fix after rebsae

--- a/ktor-client/ktor-client-core/ktor-client-core-ios/build.gradle
+++ b/ktor-client/ktor-client-core/ktor-client-core-ios/build.gradle
@@ -1,6 +1,8 @@
+
 konanArtifacts {
     library('ktor_client_core_ios') {
         enableMultiplatform true
+        extraOpts '--disable', 'devirtualization'
 
         srcDir 'src'
 
