--- a/gradle/native.gradle
+++ b/gradle/native.gradle
@@ -1,8 +1,8 @@
 
 dependencies {
     implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core-native', version: coroutines_version
-    implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx_io_native', version: kotlinx_io_version
-    implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx_coroutines_io_native', version: kotlinx_io_version
+    implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-io-native', version: kotlinx_io_version
+    implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-io-native', version: kotlinx_io_version
 }
 
 afterEvaluate {
