--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -16,7 +16,7 @@ if (platform == 'native') {
     return
 }
 
-def skipDokka = project.path.contains("ktor-samples") || project == rootProject || project.name in dokkaExcludes
+def skipDokka = project.path.contains("ktor-samples") || project == rootProject || project.name in dokkaExcludes || platform != 'jvm'
 if (!skipDokka) {
     apply from: rootProject.file('gradle/dokka.gradle')
 }
