--- a/settings.gradle
+++ b/settings.gradle
@@ -25,6 +25,8 @@ include ':ktor-client:ktor-client-jetty'
 include ':ktor-client:ktor-client-mock'
 include ':ktor-client:ktor-client-features'
 include ':ktor-client:ktor-client-features:ktor-client-json'
+include ':ktor-client:ktor-client-features:ktor-client-json:ktor-client-json-jvm'
+include ':ktor-client:ktor-client-features:ktor-client-json:ktor-client-json-ios'
 include ':ktor-client:ktor-client-features:ktor-client-auth-basic'
 include ':ktor-client:ktor-client-features:ktor-client-websocket'
 include ':ktor-features:ktor-freemarker'
@@ -75,6 +77,8 @@ project(':ktor-client:ktor-client-jetty').projectDir = "$rootDir/ktor-client/kto
 project(':ktor-client:ktor-client-mock').projectDir = "$rootDir/ktor-client/ktor-client-mock" as File
 project(':ktor-client:ktor-client-features').projectDir = "$rootDir/ktor-client/ktor-client-features" as File
 project(':ktor-client:ktor-client-features:ktor-client-json').projectDir = "$rootDir/ktor-client/ktor-client-features/ktor-client-json" as File
+project(':ktor-client:ktor-client-features:ktor-client-json:ktor-client-json-jvm').projectDir = "$rootDir/ktor-client/ktor-client-features/ktor-client-json/ktor-client-json-jvm" as File
+project(':ktor-client:ktor-client-features:ktor-client-json:ktor-client-json-ios').projectDir = "$rootDir/ktor-client/ktor-client-features/ktor-client-json/ktor-client-json-ios" as File
 project(':ktor-client:ktor-client-features:ktor-client-auth-basic').projectDir = "$rootDir/ktor-client/ktor-client-features/ktor-client-auth-basic" as File
 project(':ktor-client:ktor-client-features:ktor-client-websocket').projectDir = "$rootDir/ktor-client/ktor-client-features/ktor-client-websocket" as File
 project(':ktor-features').projectDir = "$rootDir/ktor-features" as File
