--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-version=0.9.6.32
+version=0.9.4-SNAPSHOT
 
 kotlin_version=1.2.51
-coroutines_version=0.23.42
+coroutines_version=0.23.4-native-1
 dokka_version=0.9.16
 
 netty_version=4.1.24.Final
@@ -17,8 +17,7 @@ junit_version=4.12
 
 jmh_version=1.20
 
-kotlinx_io_version=1.0.42
-
 kotlin_native_version=0.9-dev-2831
+kotlinx_io_version=0.0.11-native
 
 bintray_plugin_version=1.8.2-SNAPSHOT
