--- a/gradle/native.gradle
+++ b/gradle/native.gradle
@@ -1,4 +1,22 @@
 
+sourceSets {
+    main {
+        kotlin.srcDir 'src'
+        component {
+            target 'ios_arm64', 'ios_x64'
+            outputKinds = [KLIBRARY]
+            extraOpts '--disable', 'devirtualization'
+        }
+    }
+    test {
+        kotlin.srcDir 'test'
+        component {
+            target 'ios_arm64', 'ios_x64'
+            extraOpts '--disable', 'devirtualization'
+        }
+    }
+}
+
 dependencies {
     implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core-native', version: coroutines_version
     implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-io-native', version: kotlinx_io_version
