--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,6 @@ junit_version=4.12
 jmh_version=1.20
 
 kotlin_native_version=0.9-dev-2831
-kotlinx_io_version=0.0.11-native
+kotlinx_io_version=0.1.0-dev-4
 
 bintray_plugin_version=1.8.2-SNAPSHOT
