--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -1,38 +1,31 @@
-
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 
 apply from: rootProject.file('gradle/platform.gradle')
+
 def platform = platformOf(project)
-
-if (platform == 'native') {
-    publishing {
-        repositories {
-            maven {
-                url = 'https://dl.bintray.com/kotlin/ktor'
-            }
-        }
-    }
-    return
-}
-
 def skipDokka = project.path.contains("ktor-samples") || project == rootProject || project.name in dokkaExcludes || platform != 'jvm'
+
 if (!skipDokka) {
     apply from: rootProject.file('gradle/dokka.gradle')
 }
 
 publishing {
-    if (publishLocal) {
-        repositories {
-            maven {
+    repositories {
+        maven {
+            if (publishLocal) {
                 url globalM2
+            } else {
+                url 'https://dl.bintray.com/kotlin/ktor'
             }
         }
     }
 
     publications {
         mavenProject(MavenPublication) {
-            from components.java
+            if (platform != 'native') {
+                from components.java
+            }
             groupId project.group
             artifactId project.name
             version project.version
